squashed one more bug

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@ function game() {
 
         let rpsGame = playRound();
 
-        let playerResults = 'Player score: ' + String(playerScore);
-        let computerResults = 'Computer score: ' + String(computerScore);
+        let playerResults = 'Player score: ' + playerScore;
+        let computerResults = 'Computer score: ' + computerScore;
     
         if (rpsGame == 'win') {
             playerScore++;
